# test-operational-control-with-icub-gabrielenava

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/scripts/: OPcontrol_app.xml  OPcontrol_system.xml
misc/: Instructions.md
src/: OP_control.cpp
tests/: CMakeLists.txt  OPCtrlTest.cpp  OPCtrlTest.h
tests/suit/: OPCtrlSuit.xml
